# Traking-Yolo

./: .gitignore
metrics_output/scenario_01/accelerated_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01/accelerated_right/scenario_01_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01/accelerated_right/scenario_01_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01/accelerated_right/scenario_01_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/scenario_01/sine_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01/sine_right/scenario_01_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01/sine_right/scenario_01_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01/sine_right/scenario_01_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/scenario_01/straight_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01/straight_right/scenario_01_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01/straight_right/scenario_01_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01/straight_right/scenario_01_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/scenario_01_units_fix/straight_right/scenario_01_units_fix_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/: ambulance_reference_pose.yaml
metrics_output/scenario_01_units_fix_v2/accelerated_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01_units_fix_v2/accelerated_right/scenario_01_units_fix_v2_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/accelerated_right/scenario_01_units_fix_v2_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/accelerated_right/scenario_01_units_fix_v2_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/sine_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01_units_fix_v2/sine_right/scenario_01_units_fix_v2_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/sine_right/scenario_01_units_fix_v2_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/sine_right/scenario_01_units_fix_v2_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/straight_right/compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/scenario_01_units_fix_v2/straight_right/scenario_01_units_fix_v2_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/straight_right/scenario_01_units_fix_v2_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/scenario_01_units_fix_v2/straight_right/scenario_01_units_fix_v2_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
metrics_output/test_run_ackermann/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
metrics_output/test_run_compare/: thesis_summary_table.csv  thesis_summary_table.tex
metrics_output/test_run_fusion/: fusion_metrics_detail.csv  fusion_metrics_summary.csv
metrics_output/test_run_unicycle/: unicycle_metrics_detail.csv  unicycle_metrics_summary.csv
src/ackermann_kf_tracker/: package.xml  setup.cfg  setup.py
src/ackermann_kf_tracker/ackermann_kf_tracker/: ackermann_kf_tracker_node.py
src/ackermann_kf_tracker/config/: ackermann_kf_tracker.yaml
src/ackermann_kf_tracker/launch/: ackermann_kf_tracker.launch.py
src/depth_yolo_fusion/: package.xml  setup.cfg  setup.py
src/depth_yolo_fusion/config/: depth_yolo_fusion.yaml
src/depth_yolo_fusion/launch/: depth_yolo_fusion.launch.py
src/depth_yolo_fusion/resource/: depth_yolo_fusion
src/depth_yolo_fusion/src/depth_yolo_fusion/: depth_yolo_fusion_node.py
src/experiments/: package.xml  setup.py
src/experiments/experiments/: ambulance_motion_node.py
src/experiments/launch/: experiment_pipeline.launch.py
src/metrics_output/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
src/ros2_unreal_interface/: dummy_node.py  package.xml  setup.cfg  setup.py  test_yolo.py
src/ros2_unreal_interface/ros2_unreal_interface.egg-info/: PKG-INFO  SOURCES.txt
src/ros2_unreal_interface/src/: environment.py
src/ros2_unreal_interface/test/: connection_test.py  connection_test2
src/trajectory_metrics/: package.xml  setup.cfg  setup.py
src/trajectory_metrics/config/: trajectory_metrics.yaml
src/trajectory_metrics/launch/: trajectory_metrics.launch.py
src/trajectory_metrics/resource/: trajectory_metrics
src/trajectory_metrics/tools/: compare_metrics.py  run_all_experiments.py
src/trajectory_metrics/trajectory_metrics/: trajectory_metrics_node.py
src/unicycle_kf_tracker/: package.xml  setup.cfg  setup.py
src/unicycle_kf_tracker/config/: unicycle_kf_tracker.yaml
src/unicycle_kf_tracker/launch/: unicycle_kf_tracker.launch.py
src/unicycle_kf_tracker/unicycle_kf_tracker/: unicycle_kf_tracker_node.py  unicycle_kf_traker_node.py
src/yolo_detector/: package.xml  setup.py
src/yolo_detector/launch/: yolo_detector.launch.py
test_metrics/: ackermann_metrics_detail.csv  ackermann_metrics_summary.csv
(+16 files in other folders)
