<?xml version="1.0"?>
<package format="3">
  <name>unicycle_kf_tracker</name>
  <version>0.0.1</version>
  <description>EKF unicycle tracker based on YOLO tracking + depth fusion</description>

  <maintainer email="matracchigiulia@gmail.com">isarlab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

