<?xml version="1.0"?>
<package format="3">
  <name>unicycle_kf_tracker</name>
  <version>0.0.1</version>
  <description>Unicycle EKF tracker for fused YOLO and depth detections</description>

  <maintainer email="isarlab@example.com">isarlab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

